--- a/_config.yml
+++ b/_config.yml
@@ -2,64 +2,42 @@ url: https://subramanya.github.io
 baseurl: /agency-jekyll-theme/
 
 # Site settings
-title: Awesome Title
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: Hi, I'm Subramanya!
+email: suprabhu748@gmail.com.com
+description: "Welcome to my data-driven playground! 🚀 I'm a relentless problem-solver and devoted Data Scientist on a mission to conquer business challenges through the magic of data. With a wizardry in analytics, I transform raw data into strategic gems, crafting success stories that speak volumes. Dive into the world where algorithms meet creativity, and let's sculpt your data into a masterpiece of insights. Ready to turn complexity into clarity? Let's embark on this journey together! #DataAlchemy #AnalyticsMaestro #BusinessSolutionsMagician"
 
 
 # Team names, titles and social links
-people:
-- name: Kay Garland
+Reach out to me:
+- name: Subramanya
   pic: 1
-  position: Lead Designer
+  position: Data Scientist
   social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: stack-overflow
-      url: #
-
-- name: Larry Parker
-  pic: 2
-  position: Lead Marketer
-  social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
     - title: linkedin
-      url: #
+      url: https://www.linkedin.com/in/subramanya-prabhu-u-s-953475154/
+    # - title: facebook
+    #   url: #
+    # - title: stack-overflow
+    #   url: #
 
-- name: Diana Petersen
-  pic: 3
-  position: Lead Developer
-  social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: google-plus
-      url: #
+# # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
+# social:
+#   - title: twitter
+#     url: http://twitter.com/jekyllrb
+#   - title: facebook
+#     url:
+#   - title: stack-overflow
+#     url: http://stackoverflow.com/questions/tagged/jekyll
+#   - title: bitbucket 
+#     url: http://bitbucket.org/jekyll
+#   - title: github
+#     url: http://github.com/jekyll
 
-# Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
-social:
-  - title: twitter
-    url: http://twitter.com/jekyllrb
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket 
-    url: http://bitbucket.org/jekyll
-  - title: github
-    url: http://github.com/jekyll
+# # Postal address (add as many lines as necessary)
+# address:
+#   - line: 3481 Melrose Place
+#   - line: Beverly Hills, CA 90210
 
-# Postal address (add as many lines as necessary)
-address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
-
-# Build settings
-markdown: kramdown
-permalink: pretty
+# # Build settings
+# markdown: kramdown
+# permalink: pretty
